--- a/public/views/empty.html
+++ b/public/views/empty.html
@@ -5,19 +5,18 @@
   
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="utf-8" />
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-	<link rel="stylesheet" href="/css/style.css" />
+	<link rel="stylesheet" href="/css/select.css" />
     
 </head>
     <body>
         {% block wrap %} {% endblock %}
             
-        <hr />
+        
                 
                 <div class="title"><h3 class="grad rad2">Online стратегия</h3></div>
+                {%block content%}{% endblock%}
                 
-                
-        <hr size="3" />
+        
         
     </body>
 </html>
