--- a/public/css/style.css
+++ b/public/css/style.css
@@ -396,7 +396,7 @@ label
 
 .control-block
 {
-    display: none;
+    display: block;
 }
 
 .control-block label
@@ -448,6 +448,7 @@ hr
     z-index: 2;
     
 }
+
 
 .title h3
 {
@@ -578,5 +579,36 @@ hr
     padding: 0;
    
     height: 50px; 
+}
+
+.set-units
+{
+    top: 10%;
+    right: 30px;
+    height: 60%;
+    padding-bottom: 10px;
+    width: 20%;
+}
+
+.set-units label
+{
+    width: 100%;
+}
+
+#units-list
+{
+    list-style: none;
+}
+
+#units-list label 
+{
+    font-size: 0.8em;
+    display: inline;
+}
+
+.units-avail
+{
+    color: #ff0;
+    font-weight: bold;
 }
  
