--- a/public/views/game.html
+++ b/public/views/game.html
@@ -14,13 +14,14 @@
 	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript" src="/js/debug.js"></script>
 	<script type="text/javascript" src="/js/countries.js"></script>
-	<script type="text/javascript" src="/js/object.types.js"></script>
+	<script type="text/javascript" src="/js/unit.types.js"></script>
 	<script type="text/javascript" src="/js/index.js"></script>
 	<script type="text/javascript" src="/js/lib.move.js"></script>
     <script type="text/javascript" src="/js/lib.iface.js"></script>
 	<script type="text/javascript" src="/js/game.js"></script>
-	<script type="text/javascript" src="/js/regiment.js"></script>
-	<script type="text/javascript" src="/js/supplybase.js"></script>
+    
+	
+	
     <script type="text/javascript" src="/js/user.js"></script>
     <script type="text/javascript" src="/js/handler.js"></script>
     <script type="text/javascript" src="/js/helper.js"></script>
@@ -81,5 +82,8 @@
 
 {% block bottomjs %}
     <script type="text/javascript" src="/js/map.js"></script>
+    <script type="text/javascript" src="/js/unit.js"></script>
+    <script type="text/javascript" src="/js/regiment.js"></script>
+    <script type="text/javascript" src="/js/supplybase.js"></script>
     <script type="text/javascript" src="/js/iface.js"></script>
 {% endblock %}
