--- a/public/views/new.html
+++ b/public/views/new.html
@@ -14,12 +14,11 @@
 	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript" src="/js/debug.js"></script>
 	<script type="text/javascript" src="/js/countries.js"></script>
-	<script type="text/javascript" src="/js/object.types.js"></script>
+	<script type="text/javascript" src="/js/unit.types.js"></script>
 	<script type="text/javascript" src="/js/lib.move.js"></script>
     <script type="text/javascript" src="/js/lib.iface.js"></script>
 	<script type="text/javascript" src="/js/game.js"></script>
-	<script type="text/javascript" src="/js/regiment.js"></script>
-	<script type="text/javascript" src="/js/supplybase.js"></script>
+	
     <script type="text/javascript" src="/js/user.js"></script>
     <script type="text/javascript" src="/js/handler.js"></script>
     <script type="text/javascript" src="/js/helper.js"></script>
@@ -41,7 +40,7 @@
                 <div class="btn-block control-block grad2 font-response">
                    <button class="btn rad grad text-hover  font-response" id="btn-menu">Меню</button><br />
                 </div>
-                
+                <div id="unit-info" class="unit-info font-response"></div>
                 <div class="set-units control-block grad2 font-response">
                     <label>Выберите страну</label>
                     <select id="set-country"></select>
@@ -62,9 +61,13 @@
 {% endblock %}
 
 {% block bottomjs %}
-    <script type="text/javascript" src="/js/setunits.js"></script>
+    
     <script type="text/javascript" src="/js/socket.js"></script>
     <script type="text/javascript" src="/js/map.js"></script>
-    <script type="text/javascript" src="/js/iface_new.js"></script>
+    <script type="text/javascript" src="/js/unit.js"></script>
+    <script type="text/javascript" src="/js/regiment.js"></script>
+	<script type="text/javascript" src="/js/supplybase.js"></script>
+    <script type="text/javascript" src="/js/setunits.js"></script>
+    <script type="text/javascript" src="/js/iface.js"></script>
     
 {% endblock %}
