--- a/public/views/play.html
+++ b/public/views/play.html
@@ -23,7 +23,7 @@
 	
 	
     <script type="text/javascript" src="/js/user.js"></script>
-    <script type="text/javascript" src="/js/handler.js"></script>
+    <script type="text/javascript" src="/js/unit.event.js"></script>
     <script type="text/javascript" src="/js/helper.js"></script>
     <script type="text/javascript" src="/js/socket.js"></script>
     <script type="text/javascript" src="/js/ajax.js"></script>
@@ -83,7 +83,8 @@
 {% block bottomjs %}
     <script type="text/javascript" src="/js/map.js"></script>
     <script type="text/javascript" src="/js/unit.js"></script>
-    <script type="text/javascript" src="/js/regiment.js"></script>
-    <script type="text/javascript" src="/js/supplybase.js"></script>
+    <script type="text/javascript" src="/js/unit.factory.js"></script>
+    <!--<script type="text/javascript" src="/js/regiment.js"></script>
+    <script type="text/javascript" src="/js/supplybase.js"></script>-->
     <script type="text/javascript" src="/js/iface.js"></script>
 {% endblock %}
