--- a/public/views/join.html
+++ b/public/views/join.html
@@ -20,7 +20,7 @@
 	<script type="text/javascript" src="/js/game.js"></script>
 	
     <script type="text/javascript" src="/js/user.js"></script>
-    <script type="text/javascript" src="/js/handler.js"></script>
+    <script type="text/javascript" src="/js/unit.event.js"></script>
     <script type="text/javascript" src="/js/helper.js"></script>
     <script type="text/javascript" src="/js/ajax.js"></script>
     <script type="text/javascript" src="/js/route.js"></script>
@@ -65,9 +65,10 @@
     <script type="text/javascript" src="/js/socket.js"></script>
     <script type="text/javascript" src="/js/map.js"></script>
     <script type="text/javascript" src="/js/unit.js"></script>
-    <script type="text/javascript" src="/js/regiment.js"></script>
-	<script type="text/javascript" src="/js/supplybase.js"></script>
-    <script type="text/javascript" src="/js/setunits.js"></script>
+    <script type="text/javascript" src="/js/unit.factory.js"></script>
+    <!--<script type="text/javascript" src="/js/regiment.js"></script>
+	<script type="text/javascript" src="/js/supplybase.js"></script>-->
+    <script type="text/javascript" src="/js/join.user.js"></script>
     <script type="text/javascript" src="/js/iface.js"></script>
     
 {% endblock %}
