--- a/public/views/join.html
+++ b/public/views/join.html
@@ -15,15 +15,21 @@
 	<script type="text/javascript" src="/js/debug.js"></script>
 	<script type="text/javascript" src="/js/countries.js"></script>
 	<script type="text/javascript" src="/js/unit.types.js"></script>
-	<script type="text/javascript" src="/js/lib.move.js"></script>
-    <script type="text/javascript" src="/js/lib.iface.js"></script>
+	<script type="text/javascript" src="/js/move.js"></script>
+    <script type="text/javascript" src="/js/interface.js"></script>
 	<script type="text/javascript" src="/js/game.js"></script>
-	
     <script type="text/javascript" src="/js/user.js"></script>
     <script type="text/javascript" src="/js/unit.event.js"></script>
     <script type="text/javascript" src="/js/helper.js"></script>
     <script type="text/javascript" src="/js/ajax.js"></script>
     <script type="text/javascript" src="/js/route.js"></script>
+    <script type="text/javascript" src="/js/socket.js"></script>
+    <script type="text/javascript" src="/js/map.js"></script>
+    <script type="text/javascript" src="/js/unit.js"></script>
+    <script type="text/javascript" src="/js/unit.factory.js"></script>
+    <script type="text/javascript" src="/js/join.user.js"></script>
+    <script type="text/javascript" src="/js/app.js"></script>
+    <script type="text/javascript" src="/js/index.js"></script>
     
     
 {% endblock %}
@@ -62,11 +68,6 @@
 
 {% block bottomjs %}
     
-    <script type="text/javascript" src="/js/socket.js"></script>
-    <script type="text/javascript" src="/js/map.js"></script>
-    <script type="text/javascript" src="/js/unit.js"></script>
-    <script type="text/javascript" src="/js/unit.factory.js"></script>
-    <script type="text/javascript" src="/js/join.user.js"></script>
-    <script type="text/javascript" src="/js/iface.js"></script>
+    
     
 {% endblock %}
