--- a/public/views/play.html
+++ b/public/views/play.html
@@ -15,13 +15,14 @@
 	<script type="text/javascript" src="/js/debug.js"></script>
 	<script type="text/javascript" src="/js/countries.js"></script>
 	<script type="text/javascript" src="/js/unit.types.js"></script>
+    <script type="text/javascript" src="/js/app.js"></script>
 	<script type="text/javascript" src="/js/index.js"></script>
-	<script type="text/javascript" src="/js/lib.move.js"></script>
-    <script type="text/javascript" src="/js/lib.iface.js"></script>
+	<script type="text/javascript" src="/js/move.js"></script>
+    <script type="text/javascript" src="/js/interface.js"></script>
 	<script type="text/javascript" src="/js/game.js"></script>
-    
-	
-	
+    <script type="text/javascript" src="/js/map.js"></script>
+    <script type="text/javascript" src="/js/unit.js"></script>
+    <script type="text/javascript" src="/js/unit.factory.js"></script>
     <script type="text/javascript" src="/js/user.js"></script>
     <script type="text/javascript" src="/js/unit.event.js"></script>
     <script type="text/javascript" src="/js/helper.js"></script>
@@ -81,8 +82,5 @@
 {% endblock %}
 
 {% block bottomjs %}
-    <script type="text/javascript" src="/js/map.js"></script>
-    <script type="text/javascript" src="/js/unit.js"></script>
-    <script type="text/javascript" src="/js/unit.factory.js"></script>
-    <script type="text/javascript" src="/js/iface.js"></script>
+    
 {% endblock %}
