--- a/public/views/join.html
+++ b/public/views/join.html
@@ -28,7 +28,7 @@
     <script type="text/javascript" src="/js/unit.js"></script>
     <script type="text/javascript" src="/js/unit.factory.js"></script>
     <script type="text/javascript" src="/js/join.user.js"></script>
-    <script type="text/javascript" src="/js/app.js"></script>
+    <script type="text/javascript" src="/js/app.join.js"></script>
     <script type="text/javascript" src="/js/index.js"></script>
     
     
