--- a/public/views/play.html
+++ b/public/views/play.html
@@ -15,7 +15,7 @@
 	<script type="text/javascript" src="/js/debug.js"></script>
 	<script type="text/javascript" src="/js/countries.js"></script>
 	<script type="text/javascript" src="/js/unit.types.js"></script>
-    <script type="text/javascript" src="/js/app.js"></script>
+    <script type="text/javascript" src="/js/app.play.js"></script>
 	<script type="text/javascript" src="/js/index.js"></script>
 	<script type="text/javascript" src="/js/move.js"></script>
     <script type="text/javascript" src="/js/interface.js"></script>
