--- a/public/views/join.html
+++ b/public/views/join.html
@@ -59,6 +59,10 @@
                     <button class="btn rad grad text-hover  font-response" id="btn-clear-all">Удалить все</button>
                     <button class="btn rad grad text-hover  font-response" id="btn-begin-game">Начать игру</button>
                 </div>
+                <div id="alert" class="alert grad2">
+                    <div id="alert-text"></div> 
+                    <button id="alert-button">Закрыть</button>
+                </div>
                 
                 
         <hr size="3" />
