--- a/public/views/play.html
+++ b/public/views/play.html
@@ -76,8 +76,15 @@
                     <p></p>
                     <label id="label-next">Далее >></label>
                 </div>
+                <div id="alert-wrap">
+                    <div class="alert grad2">
+                        <div id="alert-text"></div> 
+                        <button id="alert-button">Закрыть</button>
+                    </div>
+                </div>
                 
         <hr size="3" />
+        
 
 {% endblock %}
 
