--- a/public/views/play.html
+++ b/public/views/play.html
@@ -45,7 +45,7 @@
                     
                     <label id="label-btn-block" class="text-hover font-response">Скрыть кнопки</label><br />
                    <!--<button class="btn rad grad text-hover font-response" id="btn-pause">Пауза</button><br />-->
-                   <button class="btn rad grad text-hover  font-response" id="btn-exit">Выйти из игры</button><br />
+                   <button class="btn rad grad text-hover  font-response" id="btn-exit">Главное меню</button><br />
                    <label class="text-hover font-response">Сервис маршрутов:</label><br/>
                    <select class="btn rad grad text-hover font-response" id="service">
         				<option selected="selected" value="google" >Google</option>
