make find nearest node

--- a/public/views/join.html
+++ b/public/views/join.html
@@ -37,6 +37,9 @@
     <hr />
                 
                 <div id="map">
+                <div id="preloader">
+                    <img src="/img/load.gif"/>
+                </div>
                 <div id="weather-info" class="font-response weather-info"></div>
                 </div>
                 <div class="title"><h3 class="grad rad2">{{title}}</h3></div>
@@ -65,6 +68,7 @@
                         <button id="alert-button">Закрыть</button>
                     </div>
                 </div>
+                
                 
         <hr size="3" />
 
