--- a/public/views/play.html
+++ b/public/views/play.html
@@ -28,7 +28,6 @@
     <script type="text/javascript" src="/js/helper.js"></script>
     <script type="text/javascript" src="/js/socket.js"></script>
     <script type="text/javascript" src="/js/ajax.js"></script>
-    <script type="text/javascript" src="/js/route.js"></script>
     
 {% endblock %}
 
@@ -46,13 +45,12 @@
                     <label id="label-btn-block" class="text-hover font-response">Скрыть кнопки</label><br />
                    <!--<button class="btn rad grad text-hover font-response" id="btn-pause">Пауза</button><br />-->
                    <button class="btn rad grad text-hover  font-response" id="btn-exit">Главное меню</button><br />
-                   <label class="text-hover font-response">Сервис маршрутов:</label><br/>
+                   <!--<label class="text-hover font-response">Сервис маршрутов:</label><br/>
                    <select class="btn rad grad text-hover font-response" id="service">
         				<option selected="selected" value="google" >Google</option>
         				<option value="osrm" >OSRM</option>
         				<option  value="spatialite" >Spatialite</option>
-        			</select>
-                    
+        			</select>--> 
                 </div>
                 
                 
