--- a/public/views/join.html
+++ b/public/views/join.html
@@ -27,6 +27,7 @@
                 </div>
                 <div id="unit-info" class="unit-info font-response"></div>
                 <div class="set-units control-block grad2 font-response">
+                    <input type="text" id="username" placeholder="Ваше имя"/>
                     <label>Выберите страну</label>
                     <select id="set-country"></select>
                     <hr />
