--- a/public/views/play.html
+++ b/public/views/play.html
@@ -40,6 +40,9 @@
                     <label id="label-info-block" class="text-hover font-response">Скрыть сводку</label><br/>
                     <div class="info-message font-response" id="info-message"></div>
                     <div id="mission-label" class="mission-label cursor font-response"><b>Миссия</b></div>
+                    <hr />
+                    <label id="username"></label>
+                    <img id="country-image" src=""/>
                 </div>
                 <div id="preloader"><img src="/img/load.gif"/></div>
                 <div id="unit-info" class="unit-info font-response"></div>
