--- a/public/views/join.html
+++ b/public/views/join.html
@@ -19,7 +19,7 @@
                 </div>
                 <div id="weather-info" class="font-response weather-info"></div>
                 </div>
-                <div class="title"><h3 class="grad rad2">{{title}}</h3></div>
+                <div class="title"><h3 id="mission-label" class="cursor grad rad2">{{title}}</h3></div>
                 
                 
                 <div class="btn-block control-block grad2 font-response">
@@ -40,7 +40,7 @@
                     <button class="btn rad grad text-hover  font-response" id="btn-clear-all">Удалить все</button>
                     <button class="btn rad grad text-hover  font-response" id="btn-begin-game">Начать игру</button>
                 </div>
-                
+                <div id="mission-info" class="mission-info font-response"></div>
                 
                 
         <hr size="3" />
