--- a/public/views/play.html
+++ b/public/views/play.html
@@ -12,7 +12,7 @@
                 <div id="map">
                 <div id="weather-info" class="font-response weather-info"></div>
                 </div>
-                <div class="title"><h3 class="grad rad2">{{title}}</h3></div>
+                <div class="title"><h3 id="mission-label" class="cursor grad rad2">{{title}}</h3></div>
                 
                 
                 <div class="btn-block control-block grad2 font-response">
@@ -39,7 +39,6 @@
                     
                     <label id="label-info-block" class="text-hover font-response">Скрыть сводку</label><br/>
                     <div class="info-message font-response" id="info-message"></div>
-                    <div id="mission-label" class="mission-label cursor font-response"><b>Миссия</b></div>
                     <hr />
                     <label id="username"></label>
                     <img id="country-image" src=""/>
@@ -48,10 +47,6 @@
                 <div id="unit-info" class="unit-info font-response"></div>
                 <div id="mission-info" class="mission-info font-response"></div>
                 
-                <div id="game-over" class="game-over font-response">
-                    <p></p>
-                    <label id="label-next">Далее >></label>
-                </div>
                 
         <hr size="3" />
         
