--- a/public/css/style.css
+++ b/public/css/style.css
@@ -531,7 +531,7 @@ hr
     left: 50px;
     background-color: #E2C05A;
     font-family: Verdana;
-    padding: 10px;
+    padding: 0 10px 0 10px;
 }
 
 .mission-desc
