begin convoy task

--- a/public/views/play.html
+++ b/public/views/play.html
@@ -3,7 +3,8 @@
 {% block css%}{%endblock%}
 
 {% block topjs %}
-    <script type="text/javascript" src="/js/app.play.js"></script>     
+    <script type="text/javascript" src="/js/app.play.js"></script>
+    <script type="text/javascript" src="/js/index.js"></script>     
 {% endblock %}
 
 {% block content %}
