--- a/public/views/join.html
+++ b/public/views/join.html
@@ -7,7 +7,8 @@
 {%endblock%}
 
 {% block topjs %}
-    <script type="text/javascript" src="/js/app.join.js"></script>   
+    <script type="text/javascript" src="/js/app.join.js"></script>
+    <script type="text/javascript" src="/js/index.js"></script>   
 {% endblock %}
 
 {% block content %}
