--- a/public/views/layout.html
+++ b/public/views/layout.html
@@ -25,10 +25,11 @@
     <script type="text/javascript" src="/js/unit.js"></script>
     <script type="text/javascript" src="/js/unit.factory.js"></script>
     <script type="text/javascript" src="/js/user.js"></script>
-    <script type="text/javascript" src="/js/unit.event.js"></script>
+    <script type="text/javascript" src="/js/mouse.js"></script>
     <script type="text/javascript" src="/js/helper.js"></script>
     <script type="text/javascript" src="/js/socket.js"></script>
     <script type="text/javascript" src="/js/ajax.js"></script>
+    <script type="text/javascript" src="/js/action.js"></script>
     {% block topjs %}{% endblock %}
       
 </head>
