--- a/public/views/play.html
+++ b/public/views/play.html
@@ -18,9 +18,9 @@
                 
                 <div class="btn-block control-block grad2 font-response">
                     
-                    <label id="label-btn-block" class="text-hover font-response">Скрыть кнопки</label><br />
+                    <label id="label-btn-block" class="text-hover font-response"></label><br />
                    <!--<button class="btn rad grad text-hover font-response" id="btn-pause">Пауза</button><br />-->
-                   <button class="btn rad grad text-hover  font-response" id="btn-exit">Главное меню</button><br />
+                   <button class="btn rad grad text-hover  font-response" id="btn-exit">{{dict.main_menu}}</button><br />
                    <!--<label class="text-hover font-response">Сервис маршрутов:</label><br/>
                    <select class="btn rad grad text-hover font-response" id="service">
         				<option selected="selected" value="google" >Google</option>
@@ -32,13 +32,13 @@
                 
                 <div class="log-block control-block grad2 font-response">
                     
-                    <label id="label-log-block" class="text-hover font-response">Скрыть лог</label><br/>
+                    <label id="label-log-block" class="text-hover font-response">-</label><br/>
                     <div class="log-message font-response" id="log-message"></div>
                 </div>
                 
                 <div class="info-block control-block grad2 font-response">
                     
-                    <label id="label-info-block" class="text-hover font-response">Скрыть сводку</label><br/>
+                    <label id="label-info-block" class="text-hover font-response">-</label><br/>
                     <div class="info-message font-response" id="info-message"></div>
                     <hr />
                     <label id="username"></label>
