--- a/public/views/join.html
+++ b/public/views/join.html
@@ -20,7 +20,7 @@
                 </div>
                 <div id="weather-info" class="font-response weather-info"></div>
                 </div>
-                <div class="title"><h3 id="mission-label" class="cursor grad rad2">{{title}}</h3></div>
+                <div class="title"><h3 id="mission-label" class="cursor grad rad2">{{dict[title]}}</h3></div>
                 
                 
                 <div class="btn-block control-block grad2 font-response">
