--- a/public/views/layout.html
+++ b/public/views/layout.html
@@ -13,7 +13,9 @@
     <script src="/js/lib/leaflet.js"></script>
 	<script src="/js/lib/leaflet-providers.js"></script>
     <script src="/js/lib/google_tiles.js"></script>
+    <script src="/js/lib/yandex_tiles.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+    <script src="http://api-maps.yandex.ru/2.0/?load=package.map&lang=ru-RU"></script>
 	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="/js/storage.js"></script>
     <script type="text/javascript" src="/js/dicts.js"></script>
